--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meat charset="UTF-8">
         <title>双向数据绑定</title>
         <script src="dep.js"></script>
-        <script src="observer.js"></script>
+        <script src="observe.js"></script>
         <script src="watcher.js"></script>
         <script src="myvue.js"></script>
     </head>
@@ -13,7 +13,7 @@
     </body>
     <script type="text/javascript">
         var ele = document.querySelector('#app');
-        var selfVue = new MyVue({
+        var myVue = new MyVue({
             el: ele,
             data: {
                 name: 'dfx'
