--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="dep.js"></script>
         <script src="observe.js"></script>
         <script src="watcher.js"></script>
+        <script src="compile.js"></script>
         <script src="myvue.js"></script>
     </head>
     <body>
@@ -19,8 +20,5 @@
                 name: 'dfx'
             }
         });
-
-        
-
     </script>
 </html>
