--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meat charset="UTF-8">
-        <title>双向数据绑定</title>
+        <title>myVue</title>
         <script src="dep.js"></script>
         <script src="observe.js"></script>
         <script src="watcher.js"></script>
